--- a/now.json
+++ b/now.json
@@ -5,7 +5,7 @@
     "SLACK_API_TOKEN": "@dotnetperth-slack-api-token",
     "RECAPTCHA_SECRET": "@dotnetperth-recaptcha-secret",
     "RECAPTCHA_SITEKEY": "@dotnetperth-recaptcha-sitekey",
-    "RECAPTCHA_INVISIBLE": "true",
+    "RECAPTCHA_INVISIBLE": "true"
   },
   "github": {
     "silent": true
